# flowapp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  check.ipynb  compose.yml  conda-lock.yml  docker-compose.yml  environment.yml  manifest.yaml  pyproject.toml  schemas.barfi  test.ipynb  test.json
demo/: delaney.csv
docs/: deploy-using-k8s.md
flowapp/: app.py
flowapp/blocks/: __init__.py  dataloader.py  descriptors.py  evaluator.py  modifier.py  predicter.py  qm.py  regression.py  saver.py  selecter.py  splitter.py  statistics.py  visualizers.py
flowapp/clients/: flowqm_api_client.py
flowapp/components/: __init__.py  block_visualizer.py  file_handler.py  plots.py
flowapp/utils/: converter.py  logger.py  regressor.py
flowapp_manager/: Dockerfile  app.py  manifest.yaml
schemas/: schemas.barfi
scripts/: check_conda_lock.py  update_conda_lock.py
services/flowqm/: Dockerfile  LICENSE  pyproject.toml  service.py
services/flowqm/flowqm/: __init__.py  qm_pb2.pyi  qm_pb2_grpc.py  service.py
services/flowqm/tests/: test_qm_service.py
services/qm-service/: qm_pb2.py  qm_pb2.pyi  qm_pb2_grpc.py  service.py
services/qm-service/proto/: qm.proto
src/flowapp/: __init__.py  app.py
src/flowapp/blocks/: dataloader.py  descriptors.py  evaluator.py  ml.py  modifier.py  predicter.py  regression.py  saver.py  selecter.py  splitter.py  visualizers.py
src/flowapp/components/: file_handler.py  plots.py  visualizers.py
